<resources>
    <string name="app_name">ProyectoPST</string>
    <string name="my_comparison_app">My Comparison App</string>
    <string name="el_mejor_lugar_para_comparar_tus_precios">El mejor lugar para comparar tus precios</string>
    <string name="full_name">Full Name</string>
    <string name="registro">Registro</string>
    <string name="full_name1">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_sign_in">Already Sign in?</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_te_registraste">¿Ya te registraste?</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="pagar_la_orden">Pagar la orden</string>
    <string name="total">Total</string>
    <string name="valor_a_pagar">Valor a Pagar</string>
</resources>